For Codecademy Review final

--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
         </div>
       </div>
     </div>
+    <!-- MOBILE VERSION -->
     <div class="start-learning-mobile">
       <h1>Start learning</h1>
         <div class="container">
@@ -250,7 +251,7 @@
       <!-- Left side -->
         <div class="left-column">
           <div class="video">
-            <video loop width="100%" height="auto" autoplay>
+            <video loop width="100%" height="auto" controls>
             <source src="resources/thesis.mp4" type="video/mp4">
             Your browser does not support the video tag.
             </video>
